Use env to find perl for testing (instead of $^X)
smokers are likely to be using a different interpreter than
the one in $PATH, but the scripts use the one in $PATH,
so make the tests do the same.

--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Revision history for App-rlibperl
 
 {{$NEXT}}
 
+  [Test Fixes]
+  - Change t/lib to look for perl in $PATH before using $^X
+
 0.400     2011-10-03T15:05:57Z
 
   - Initial release
