--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for App-rlibperl
 
 {{$NEXT}}
 
+  - Attempt to fix path comparison in tests on OS X
+
 0.600     2011-10-13T16:55:37Z
 
   - Generate scripts to enable rbinperl to stand-alone
